End of Assignment3_Q3.py

--- a/Assignments/Assignment3/Assignment3.ipynb
+++ b/Assignments/Assignment3/Assignment3.ipynb
@@ -604,53 +604,54 @@
     "\n",
     "\n",
     "\n",
-    "def robustPCA(X, delta=1e-6, mu=None, maxiter=500):\n",
+    "def robustPCA(X, delta=2e-8, mu=None, maxiter=500):\n",
+    "\t\"\"\"\n",
+    "\tThe function should return a PCA like part stored in 'L' with only a few singular values\n",
+    "\tthat are non zero and a sparse sequence 'S' in which the images are black except w very\n",
+    "\tlimited number of pixels\n",
+    "\t\"\"\"\n",
     "\n",
-    "    '''\n",
-    "    The function should return a PCA like part stored in 'L' with only a few singular values \n",
-    "    that are non zero and a sparse sequence 'S' in which the images are black except w very \n",
-    "    limited number of pixels\n",
-    "    '''\n",
-    "    \n",
-    "    \n",
-    "    # Initialize the tuning parameters.\n",
-    "    lam = # put your value for lambda\n",
-    "    if mu is None:\n",
-    "        \n",
-    "        # complete with your value for mu\n",
-    "        \n",
-    "    # Convergence criterion.\n",
-    "    norm = np.sum(X ** 2)\n",
+    "\t# Initialize the tuning parameters.\n",
+    "\tlam = 1 / max(X.shape[0], X.shape[1])\n",
+    "\tif mu is None:\n",
+    "\t\t# complete with your value for mu\n",
+    "\t\tmu = X.shape[0] * X.shape[1] / (4 * np.linalg.norm(X, ord=1, axis=None))\n",
     "\n",
-    "    # Iterate.\n",
-    "    i = 0\n",
-    "    rank = np.min(shape)\n",
-    "    S = np.zeros(shape)\n",
-    "    Y = np.zeros(shape)\n",
-    "    while i < max(maxiter, 1):\n",
-    "        \n",
-    "        \n",
-    "        # Step 1. Compute and truncate the SVD\n",
-    "        \n",
-    "        \n",
+    "\t# Convergence criterion.\n",
+    "\tnorm = np.sum(X ** 2)\n",
     "\n",
-    "        # Step 2. Truncate the entries of X - L + mu^(-1)Y \n",
-    "        \n",
+    "\t# Iterate.\n",
+    "\ti = 0\n",
+    "\t# rank = np.min(X.shape[0], X.shape[1])\n",
+    "\tS = np.zeros((X.shape[0], X.shape[1]))\n",
+    "\tY = np.zeros((X.shape[0], X.shape[1]))\n",
+    "\twhile i < max(maxiter, 1):\n",
     "\n",
-    "        # Step 3. Update the matrix Y\n",
-    "        \n",
-    "        \n",
+    "\t\t# Step 1. Compute and truncate the SVD\n",
+    "\t\tstep1_temp = X - S - (1/mu) * Y\n",
+    "\t\tu, sigma_arrary, vt = fbpca.pca(step1_temp, raw=True, n_iter=5)\n",
+    "\t\ttruncated_sigma = np.sign(sigma_arrary) * np.maximum(np.abs(sigma_arrary)-mu, 0)\n",
+    "\t\ttruncated_sigma_matrix = np.zeros((u.shape[1], vt.shape[0]))\n",
+    "\t\tfor j in range(len(truncated_sigma)):\n",
+    "\t\t\ttruncated_sigma_matrix[j, j] = truncated_sigma[j]\n",
+    "\t\tL = np.matmul(np.matmul(u, truncated_sigma_matrix), vt)\n",
     "\n",
-    "        # Convergence criterion\n",
-    "        err = np.sqrt(np.sum(step ** 2) / norm)\n",
-    "        if err < delta:\n",
-    "            break\n",
-    "        i += 1\n",
+    "\t\t# Step 2. Truncate the entries of X - L + mu^(-1)Y\n",
+    "\t\tstep2_temp = X - L + (1/mu) * Y\n",
+    "\t\tS = np.sign(step2_temp) * np.maximum(np.abs(step2_temp) - lam*mu, 0)\n",
     "\n",
-    "    if i >= maxiter:\n",
-    "        break\n",
-    "        \n",
-    "    return L, S"
+    "\t\t# Step 3. Update the matrix Y\n",
+    "\t\tY = Y + mu * (X - L - S)\n",
+    "\n",
+    "\t\t# Convergence criterion\n",
+    "\t\terr = np.sqrt(np.sum((X-L-S) ** 2) / norm)\n",
+    "\n",
+    "\t\tprint(err)\n",
+    "\t\tif err < delta:\n",
+    "\t\t\tbreak\n",
+    "\t\ti += 1\n",
+    "\n",
+    "\treturn L, S"
    ]
   },
   {
@@ -668,7 +669,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put your code here"
+    "# put your code here\n",
+    "L_result, S_result = robustPCA(movie[\"X\"])\n",
+    "temp_image = np.hstack((L_result[:, 5].reshape(160, 130), S_result[:, 5].reshape(160, 130)))\n",
+    "plt.imshow(temp_image.swapaxes(0, 1), cmap='gray')\n",
+    "plt.show()"
    ]
   }
  ],
