--- a/Assignments/Assignment3/Assignment3.ipynb
+++ b/Assignments/Assignment3/Assignment3.ipynb
@@ -116,7 +116,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()"
+    "from tensorflow.keras.layers import Conv2D\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras import layers\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import glob\n",
+    "\n",
+    "# reading data\n",
+    "image_size = (100, 100)\n",
+    "img_list = []\n",
+    "target_list = []\n",
+    "for folder in range(1, 5):\n",
+    "    folder_name = str(folder)\n",
+    "    for img in glob.glob(folder_name + \"/*.png\"):\n",
+    "        img_temp = cv2.imread(img)\n",
+    "        img_temp = cv2.resize(img_temp, image_size)\n",
+    "        img_list.append(img_temp)\n",
+    "        target_list.append(folder)\n",
+    "\n",
+    "\n",
+    "def unison_shuffled_copies(a, b):\n",
+    "    assert len(a) == len(b)\n",
+    "    p = np.random.permutation(len(a))\n",
+    "    return a[p], b[p]\n",
+    "\n",
+    "\n",
+    "img_list = np.asarray(img_list)\n",
+    "target_list = np.asarray(target_list).reshape(-1, 1)\n",
+    "img_list, target_list = unison_shuffled_copies(img_list, target_list)\n",
+    "\n",
+    "train_image = np.asarray(img_list[:3500])\n",
+    "train_labels = np.asarray(target_list[:3500]).reshape(-1, 1)\n",
+    "\n",
+    "test_image = np.asarray(img_list[3500:])\n",
+    "test_labels = np.asarray(target_list[3500:]).reshape(-1, 1)\n",
+    "\n",
+    "model = Sequential()\n"
    ]
   },
   {
@@ -134,10 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Conv2D(num_units, (filter_size1, filter_size2), padding='same',\n",
-    "                             input_shape=(3, IMG_SIZE, IMG_SIZE),\n",
-    "                             activation='relu'))\n",
-    "                     "
+    "model.add(Conv2D(16, (3, 3), padding='same', input_shape=(image_size[0], image_size[1], 3), activation='relu'))"
    ]
   },
   {
@@ -153,7 +188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Conv2D(filters, filter_size, activation, input_shape)"
+    "model.add(layers.MaxPooling2D((2, 2), strides=None))\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu'))\n",
+    "\n",
+    "print(model.summary())"
    ]
   },
   {
@@ -221,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Flatten())"
+    "model.add(layers.Flatten())"
    ]
   },
   {
@@ -237,7 +275,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Dense(num_units, activation='relu'))"
+    "model.add(layers.Dense(10, activation='relu'))\n",
+    "model.add(layers.Dense(5, activation=\"softmax\"))\n",
+    "\n",
+    "print(model.summary())"
    ]
   },
   {
@@ -258,8 +299,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "\n",
     "# construct the model using convolutional layers, dense fully connected layers and \n",
     "\n"
    ]
@@ -286,8 +325,8 @@
     "# Myoptimizer = SGD\n",
     "# Myoptimizer = Adam\n",
     "\n",
-    "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=Myoptimizer,\n",
+    "model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False),\n",
+    "              optimizer=\"adam\",\n",
     "              metrics=['accuracy'])"
    ]
   },
@@ -309,7 +348,15 @@
     "batch_size = 32\n",
     "epochs = 30\n",
     "\n",
-    "model.fit(X, t,batch_size=batch_size,epochs=epochs, validation_split=0.2)"
+    "history = model.fit(train_image, train_labels, batch_size=batch_size, epochs=epochs, validation_data=(test_image, test_labels))\n",
+    "\n",
+    "plt.plot(history.history['accuracy'], label='accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label='val_accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.ylim([0.5, 1])\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.show()"
    ]
   },
   {
